--- a/index.html
+++ b/index.html
@@ -430,6 +430,11 @@
 
     <main class="container" role="main">
         <div class="grid">
+            <section class="card">
+                <img src="images/buon-ladrone-hero.png" alt="Immagine buon ladrone">
+            </section>
+        </div>
+        <div class="grid">
             <section class="card" id="spiegazione-foto">
                 <h2>Spiegazione delle foto</h2>
                 <p class="meta">Qui trovi immagini tipiche dell'iconografia: ognuna ha una breve spiegazione che aiuta a
@@ -540,7 +545,7 @@
             <h3>Risorse scaricabili</h3>
             <p>Materiali didattici e di approfondimento:</p>
             <ul>
-                <li><a href="files/scheda-buon-ladrone.txt" class="button" download>Scheda didattica PDF</a></li>
+                <li><a href="files/scheda-buon-ladrone.pdf" class="button" download>Scheda didattica PDF</a></li>
                 <br>
                 <li><a href="files/immagini-buon-ladrone.zip" class="button" download>Raccolta di immagini HD</a></li>
                 <br>
