--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
 
                 O ammirabile Ladrone!<br>
                 Hai veduto un uomo crocifisso e lo proclamasti Dio.<br>
-                SanGiovanniCrisostomo <br>
-                ScuolaiconograficadiSeriate-RussiaCristiana
+                San Giovanni Crisostomo <br>
+                Scuola iconografica di Seriate-Russia Cristiana
             </p>
 
         </div>
@@ -649,3 +649,4 @@
 </body>
 
 </html>
+
